# lab4sem2

./: .gitignore  CMakeLists.txt
include/: ArrayStream.hpp  Cardinal.hpp  CompositeGenerator.hpp  CompositeGenerator.tpp  FileStream.hpp  Generator.hpp  IStream.hpp  LazySequence.hpp  LazySequence.tpp  LazySequenceStream.hpp  MainWindow.hpp  MapGenerator.hpp  MapGenerator.tpp  Option.hpp  RecurrentGenerator.hpp  RecurrentGenerator.tpp  SequenceGenerator.hpp  SequenceGenerator.tpp  StatisticsWidget.hpp  StreamAlgorithms.hpp  StreamStatistics.hpp  StringStream.hpp  SubstringCounter.hpp  SubstringSearchWidget.hpp  WhereGenerator.hpp  WhereGenerator.tpp
source/: MainWindow.cpp  StatisticsWidget.cpp  SubstringSearchWidget.cpp  main.cpp
tests/: test_lazysequence.cpp  test_manual.cpp  test_stream.cpp
